--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "con editor",
   "main": "src/app.js",
   "scripts": {
-    "start": "electron ./src",
+    "start": "electron ./src/app.js",
     "dist": "gulp electron"
   },
   "repository": {
